# comfyui-storyboard

./: .gitignore  README.md  __init__.py  presets.json  pyproject.toml  storyboard.db
web/: comfyui_storyboard.js
